[UPD] calculator scaffold

--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
     <title>Calculator</title>
 </head>
 <body>
-    
+    <div class="container d-flex justify-center align-center">
+        <div class="calculator">
+            <!-- BOOSIO -->
+            <div class="boosio d-flex justify-center">
+                <span>BOOSIO</span>
+            </div>
+            <!-- DISPLAY -->
+            <div class="display d-flex align-center">
+                <span class="zero">0</span>
+            </div>
+            <!-- KEYBOARD -->
+            <div class="keyboard">
+                hjhjgjh
+            </div>
+        </div>
+    </div>
 </body>
 </html>
