--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container d-flex justify-center align-center">
         <div class="calculator">
             <!-- BOOSIO -->
-            <div class="boosio d-flex justify-center">
+            <div class="boosio d-flex justify-center align-center">
                 <span>BOOSIO</span>
             </div>
             <!-- DISPLAY -->
@@ -21,8 +21,39 @@
                 <span class="zero">0</span>
             </div>
             <!-- KEYBOARD -->
-            <div class="keyboard">
-                hjhjgjh
+            <div class="keyboard d-flex">
+                <div class="col-left">
+                    <div class="row d-flex justify-around">
+                        <div class="tasto">7</div>
+                        <div class="tasto">8</div>
+                        <div class="tasto">9</div>
+                    </div>
+                    <div class="row d-flex justify-around">
+                        <div class="tasto">4</div>
+                        <div class="tasto">5</div>
+                        <div class="tasto">6</div>
+                    </div>
+                    <div class="row d-flex justify-around">
+                        <div class="tasto">1</div>
+                        <div class="tasto">2</div>
+                        <div class="tasto">3</div>
+                    </div>
+                    <div class="row d-flex">
+                        <div class="tasto col-zero d-flex justify-center">
+                            <span>0</span>
+                        </div>
+                        <div class="tasto col-equal d-flex justify-center">
+                            <span>=</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-right ">
+                    <div class="tasto-right">C</div>
+                    <div class="tasto-right">+</div>
+                    <div class="tasto-right">-</div>
+                    <div class="tasto-right">x</div>
+                    <div class="tasto-right">/</div>
+                </div>
             </div>
         </div>
     </div>
