[UPD] keyboard details

--- a/index.html
+++ b/index.html
@@ -24,35 +24,43 @@
             <div class="keyboard d-flex">
                 <div class="col-left">
                     <div class="row d-flex justify-around">
-                        <div class="tasto">7</div>
-                        <div class="tasto">8</div>
-                        <div class="tasto">9</div>
+                        <div class="key bg-gray">7</div>
+                        <div class="key bg-gray">8</div>
+                        <div class="key bg-gray">9</div>
                     </div>
                     <div class="row d-flex justify-around">
-                        <div class="tasto">4</div>
-                        <div class="tasto">5</div>
-                        <div class="tasto">6</div>
+                        <div class="key bg-gray">4</div>
+                        <div class="key bg-gray">5</div>
+                        <div class="key bg-gray">6</div>
                     </div>
                     <div class="row d-flex justify-around">
-                        <div class="tasto">1</div>
-                        <div class="tasto">2</div>
-                        <div class="tasto">3</div>
+                        <div class="key bg-gray">1</div>
+                        <div class="key bg-gray">2</div>
+                        <div class="key bg-gray">3</div>
                     </div>
                     <div class="row d-flex">
-                        <div class="tasto col-zero d-flex justify-center">
+                        <div class="key bg-gray col-zero d-flex justify-center">
                             <span>0</span>
                         </div>
-                        <div class="tasto col-equal d-flex justify-center">
+                        <div class="key bg-orange white col-equal d-flex justify-center">
                             <span>=</span>
                         </div>
                     </div>
                 </div>
-                <div class="col-right ">
-                    <div class="tasto-right">C</div>
-                    <div class="tasto-right">+</div>
-                    <div class="tasto-right">-</div>
-                    <div class="tasto-right">x</div>
-                    <div class="tasto-right">/</div>
+                <div class="col-right">
+                    <div class="key-right bg-orange white">C</div>
+                    <div class="key-right bg-lightblue white d-flex justify-center">
+                        <span>+</span>
+                    </div>
+                    <div class="key-right bg-lightblue white d-flex justify-center">
+                        <span>-</span>
+                    </div>
+                    <div class="key-right bg-lightblue white d-flex justify-center">
+                        <span>x</span>
+                    </div>
+                    <div class="key-right bg-lightblue white d-flex justify-center">
+                        <span>/</span>
+                    </div>
                 </div>
             </div>
         </div>
