[UPD] last details

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-right">
+                <div class="col-right d-flex justify-between">
                     <div class="key-right bg-orange white">C</div>
                     <div class="key-right bg-lightblue white d-flex justify-center">
                         <span>+</span>
