[FIX] padding key "1"

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <div class="key bg-gray">6</div>
                     </div>
                     <div class="row d-flex justify-around">
-                        <div class="key bg-gray">1</div>
+                        <div class="key bg-gray" style="padding: 16px 23px;">1</div>
                         <div class="key bg-gray">2</div>
                         <div class="key bg-gray">3</div>
                     </div>
