--- a/index.html
+++ b/index.html
@@ -24,43 +24,33 @@
             <div class="keyboard d-flex">
                 <div class="col-left">
                     <div class="row d-flex justify-around">
-                        <div class="key bg-gray">7</div>
-                        <div class="key bg-gray">8</div>
-                        <div class="key bg-gray">9</div>
+                        <button class="key bg-gray">7</button>
+                        <button class="key bg-gray">8</button>
+                        <button class="key bg-gray">9</button>
                     </div>
                     <div class="row d-flex justify-around">
-                        <div class="key bg-gray">4</div>
-                        <div class="key bg-gray">5</div>
-                        <div class="key bg-gray">6</div>
+                        <button class="key bg-gray">4</button>
+                        <button class="key bg-gray">5</button>
+                        <button class="key bg-gray">6</button>
                     </div>
                     <div class="row d-flex justify-around">
-                        <div class="key bg-gray" style="padding: 16px 23px;">1</div>
-                        <div class="key bg-gray">2</div>
-                        <div class="key bg-gray">3</div>
+                        <button class="key bg-gray" style="padding: 16px 23px;">1</button>
+                        <button class="key bg-gray">2</button>
+                        <button class="key bg-gray">3</button>
                     </div>
                     <div class="row d-flex">
-                        <div class="key bg-gray col-zero d-flex justify-center">
-                            <span>0</span>
-                        </div>
-                        <div class="key bg-orange white col-equal d-flex justify-center">
-                            <span>=</span>
-                        </div>
+                        <button class="key bg-gray col-zero d-flex justify-center">0</button>
+                        <button class="key bg-orange white col-equal d-flex justify-center">=</button>
                     </div>
                 </div>
                 <div class="col-right d-flex justify-between">
-                    <div class="key-right bg-orange white">C</div>
-                    <div class="key-right bg-lightblue white d-flex justify-center">
+                    <button class="key-right bg-orange white">C</button>
+                    <button class="key-right bg-lightblue white d-flex justify-center">
                         <span>+</span>
-                    </div>
-                    <div class="key-right bg-lightblue white d-flex justify-center">
-                        <span>-</span>
-                    </div>
-                    <div class="key-right bg-lightblue white d-flex justify-center">
-                        <span>x</span>
-                    </div>
-                    <div class="key-right bg-lightblue white d-flex justify-center">
-                        <span>/</span>
-                    </div>
+                    </button>
+                    <button class="key-right bg-lightblue white d-flex justify-center">-</button>
+                    <button class="key-right bg-lightblue white d-flex justify-center">x</button>
+                    <button class="key-right bg-lightblue white d-flex justify-center">/</button>
                 </div>
             </div>
         </div>
